--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,7 @@ h1 {
 
 .btn {
   margin-top: 1.5rem;
+  margin-bottom: 1rem;
   padding: 15px 40px;
   border-radius: 10px;
   background-color: #4d5b9e;
@@ -45,7 +46,6 @@ h1 {
   font-family: "Inter", sans-serif;
   font-size: 1rem;
   box-shadow: 0px 4px 4px #000000 25%;
-  width: 100%;
   cursor: pointer;
   text-decoration: none;
 }
