--- a/src/styles.css
+++ b/src/styles.css
@@ -62,7 +62,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 1rem;
+  margin-top: 5rem;
   text-decoration: none;
 }
 
@@ -73,24 +73,26 @@ h1 {
 }
 
 .quiz {
-  margin: 10% 10% 0;
+  margin: 5% 10% -3%;
 }
 
 .options {
-  margin-top: 0.5rem;
+  margin: 1.5rem 0;
   display: flex;
   align-items: center;
-  width: 70%;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
 
 .option {
   font-family: "Inter", sans-serif;
-  font-size: 0.9rem;
   padding: 7px 20px;
-  border-radius: 10px;
+  letter-spacing: 0.5px;
+  border-radius: 8px;
+  font-weight: medium;
   cursor: pointer;
-  font-weight: 600;
-  margin-right: 2rem;
+  border: 1px solid #4d5b9e;
+  line-height: auto;
 }
 
 .option.last {
@@ -99,7 +101,7 @@ h1 {
 
 @media (max-width: 768px) {
   .quiz {
-    margin: 5% 5% 0;
+    margin: 5%;
   }
 
   .options {
