color can be changed when option is selected

--- a/src/styles.css
+++ b/src/styles.css
@@ -58,12 +58,11 @@ h1 {
   text-decoration: none;
 }
 
-.btn.checkAnswer {
+.summary {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 5rem;
-  text-decoration: none;
 }
 
 .loading {
@@ -86,36 +85,29 @@ h1 {
 
 .option {
   font-family: "Inter", sans-serif;
-  padding: 7px 20px;
   letter-spacing: 0.5px;
-  border-radius: 8px;
   font-weight: medium;
-  cursor: pointer;
-  border: 1px solid #4d5b9e;
   line-height: auto;
 }
 
-.option.last {
-  margin-right: 0;
+.initial {
+  padding: 5px 12px;
+  text-align: center;
+  border-radius: 12px;
+  cursor: pointer;
+  border: 1px solid #4d5b9e;
+}
+
+.selected {
+  padding: 5px 12px;
+  border-radius: 12px;
+  border: transparent;
+  text-align: center;
+  background-color: #d6dbf5;
 }
 
 @media (max-width: 768px) {
   .quiz {
     margin: 5%;
-  }
-
-  .options {
-    margin-top: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .option {
-    font-family: "Inter", sans-serif;
-    font-size: 0.9rem;
-    border: 1px solid #293264;
-    padding: 7px 20px;
-    border-radius: 10px;
   }
 }
