--- a/src/styles.css
+++ b/src/styles.css
@@ -101,9 +101,47 @@ h1 {
 .selected {
   padding: 5px 12px;
   border-radius: 12px;
-  border: transparent;
   text-align: center;
   background-color: #d6dbf5;
+}
+
+.greyed-out {
+  padding: 5px 12px;
+  text-align: center;
+  border-radius: 12px;
+  cursor: pointer;
+  border: 1px solid #4d5b9e;
+}
+
+.correct {
+  padding: 5px 12px;
+  border-radius: 12px;
+  text-align: center;
+  background-color: #94d7a2;
+}
+
+.wrong {
+  padding: 5px 12px;
+  border-radius: 12px;
+  text-align: center;
+  background-color: #f8bcbc;
+}
+
+.summary {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.completed-summary {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+}
+
+.completed-summary p {
+  font-weight: bold;
 }
 
 @media (max-width: 768px) {
