--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ body {
   color: #293264;
   background-color: #f5f7fb;
   height: 100%;
+  overflow-x: hidden;
   min-height: 100vh;
 }
 
@@ -91,38 +92,39 @@ h1 {
 }
 
 .initial {
-  padding: 5px 12px;
+  padding: 5px 15px;
   text-align: center;
-  border-radius: 12px;
+  border-radius: 8px;
   cursor: pointer;
   border: 1px solid #4d5b9e;
 }
 
 .selected {
-  padding: 5px 12px;
-  border-radius: 12px;
+  padding: 5px 15px;
+  border-radius: 8px;
   text-align: center;
   background-color: #d6dbf5;
 }
 
 .greyed-out {
-  padding: 5px 12px;
+  padding: 5px 15px;
   text-align: center;
-  border-radius: 12px;
+  border-radius: 8px;
   cursor: pointer;
   border: 1px solid #4d5b9e;
+  opacity: 0.7;
 }
 
 .correct {
-  padding: 5px 12px;
-  border-radius: 12px;
+  padding: 5px 15px;
+  border-radius: 8px;
   text-align: center;
   background-color: #94d7a2;
 }
 
 .wrong {
-  padding: 5px 12px;
-  border-radius: 12px;
+  padding: 5px 15px;
+  border-radius: 8px;
   text-align: center;
   background-color: #f8bcbc;
 }
@@ -137,6 +139,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 3rem;
 }
 
@@ -147,5 +150,10 @@ h1 {
 @media (max-width: 768px) {
   .quiz {
     margin: 5%;
+  }
+
+  .completed-summary {
+    flex-direction: column;
+    gap: 0;
   }
 }
